Bug 92630 - GTK+ auto-accelerator functionality missing
Summary: GTK+ auto-accelerator functionality missing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.3.3.2 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0
Keywords:
: 97586 (view as bug list)
Depends on:
Blocks: Shortcuts-Accelerators GTK2
  Show dependency treegraph
 
Reported: 2015-07-08 17:09 UTC by Simon Long
Modified: 2024-02-11 04:45 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Long 2015-07-08 17:09:13 UTC
GTK+2 and GTK+3 include the mechanism to hide accelerator shortcuts (indicated by underlines) in menus and windows. This behaviour is optional in GTK+2, but is now mandated in GTK+3 and cannot be disabled - the underlines are only shown and only functional while the Alt key is held.

This functionality is missing from LibreOffice. I have added it as best I can to the 4.3.3 branch (used in Debian Jessie) - this seems to work and to behave as GTK+3.0 does. There are also a few related bugfixes for inconsistent UI behaviour in LibreOffice, such as in some cases accelerator keys working in windows whether or not Alt is held.

I've pushed the changes onto the 4.3.3 branch in gerrit - https://gerrit.libreoffice.org/16868 I don't have the time to merge these with the master branch, but they (or something offering the same functionality) ought to be integrated in order to match the behaviour and appearance of GTK+ 3.0
Comment 1 Commit Notification 2015-07-09 15:08:15 UTC
Simon Long committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=74407aef94b6d8dfdd69891c4a6e578587ef3e71

tdf#92630 Enable auto-accelerator behaviour for gtk

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Caolán McNamara 2015-07-09 15:09:33 UTC
Nice and shiny.
Comment 3 Adolfo Jayme Barrientos 2015-07-09 18:51:11 UTC
*** Bug 54169 has been marked as a duplicate of this bug. ***
Comment 4 Simon Long 2015-07-09 19:09:38 UTC
Many thanks for doing the integration work - very pleased this has made it upstream!
Comment 5 Samuel Mehrbrodt 2015-07-10 08:58:45 UTC
Thanks for the patch! More patches are most welcome :)
Comment 6 Commit Notification 2015-07-13 09:52:55 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5a247505a36ccdb911e48f0d859572f56ec4b171

don't crash on Shift+F10, men can be null, tdf#92630 follow-up

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Luke 2016-01-22 12:39:03 UTC
This commit has changed the behavior of all dialog boxes. You can no longer just press a key to access the bottom buttons with gtk3. This is a jarring issue for people who do most of their work on the keyboard and makes the gtk3 plugin behave differently than all the others.  See Bug 97260
Comment 8 Yousuf Philips (jay) (retired) 2016-02-05 12:44:58 UTC
*** Bug 97586 has been marked as a duplicate of this bug. ***