don't crash on Shift+F10, men can be null, tdf#92630 follow-up

... and actually make this work with a context menu..

Change-Id: I9a9bcdccae859cb2a54ec7db442435215e21e0e0